<resources>
    <string name="app_name">Kepce</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>

    <string name="navigation_drawer_meals">Meals</string>
    <string name="navigation_drawer_cart">Cart</string>
    <string name="navigation_drawer_restaurants">Restaurants</string>
    <string name="navigation_drawer_account">Account</string>
    <string name="navigation_drawer_profile">Profile</string>
    <string name="navigation_drawer_addresses">Addresses</string>
    <string name="navigation_drawer_orders">Orders</string>
    <string name="navigation_drawer_logout">Logout</string>
    <string name="title_activity_register">Sign up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_email">This e-mail address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Sign in</string>

    <string name="profile_firstname">First name</string>
    <string name="profile_lastname">Last name</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_phonenumber">Phone Number</string>
    <string name="profile_birthday">Birthday</string>
    <string name="profile_height">Height</string>
    <string name="profile_weight">Weight</string>
    <string name="profile_update">Update</string>

    <string name="gender_unknown">Unknown</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>

    <string name="title_activity_address">Address</string>
    <string name="address_title">Title</string>
    <string name="address_address">Address</string>
    <string name="address_district">District</string>
    <string name="address_city">City</string>
    <string name="address_description">Description</string>

    <string name="meal_quantity">Quantity</string>
    <string name="meal_add_to_cart">Add to cart</string>

    <string name="format_distance_km">%1$.1f km</string>
    <string name="format_price_tl">₺ %1$.2f</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
