<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_meals"
            android:icon="@drawable/ic_restaurant_black_24dp"
            android:title="@string/navigation_drawer_meals" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/navigation_drawer_cart" />
        <item
            android:id="@+id/nav_restaurants"
            android:icon="@drawable/ic_store_black_24dp"
            android:title="@string/navigation_drawer_restaurants" />
        <item android:title="@string/navigation_drawer_account">
            <menu>
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_account_circle_black_24dp"
                    android:title="@string/navigation_drawer_profile" />
                <item
                    android:id="@+id/nav_addresses"
                    android:icon="@drawable/ic_home_black_24dp"
                    android:title="@string/navigation_drawer_addresses" />
                <item
                    android:id="@+id/nav_orders"
                    android:icon="@drawable/ic_history_black_24dp"
                    android:title="@string/navigation_drawer_orders" />
            </menu>
        </item>
    </group>
</menu>
